[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
description = "Queue programs for execution"
build = "build.rs"
license = "GPL-3.0"
name = "process-queue"
readme = "README.md"
version = "0.1.1"
repository = "https://bitbucket.org/Soft/process-queue"
keywords = ["queue"]
categories = ["command-line-utilities"]

[[bin]]
name = "pqueue"
path = "src/main.rs"

[build-dependencies]
clap = "2.20.3"

[dependencies]
clap = "2.20.3"
daemonize = "0.2.3"
dbus = "0.5.0"
regex = "0.2.1"
slog = "1.5.2"
slog-json = "1.2.1"
slog-stream = "1.2.0"
slog-term = "1.5.0"
users = "0.5.2"
xdg = "2.0.0"

[profile.release]
lto = true
panic = "abort"
