[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
description = "Command-line task queue"
license = "MIT"
name = "process-queue"
readme = "README.md"
version = "0.2.0"
repository = "https://github.com/Soft/process-queue"
edition = "2018"
keywords = ["queue"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[[bin]]
name = "pqueue"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
libc = "0.2"
log = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.0"
simplelog = { version = "0.10", default-features = false }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["net", "process", "rt-multi-thread", "io-util", "sync", "signal", "macros", "time"] }
